# arrayfire-config-info

./: CMakeLists.txt  arrayfire-config-info.cpp  arrayfire-list-devices.cpp
